Update setup for tailscale serve

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ PORT=8081
 # This is passed to the client so it can ping the wake-up endpoint
 # Example: https://your-sprite.fly.dev
 SPRITE_PUBLIC_URL=
+
+# Tailscale Serve URL (HTTPS, PWA-ready)
+# Set automatically by sprite-setup.sh when Tailscale Serve is configured
+# Example: https://my-sprite.tailnet-name.ts.net
+TAILSCALE_SERVE_URL=
