Add token-based auth for flyctl and sprite CLI
- Support FLY_API_TOKEN for non-interactive flyctl auth
- Support SPRITE_API_TOKEN for sprite CLI (if CLI supports it)
- Add both tokens to config parser and save_config
- Update example config with FLY_API_TOKEN and SPRITE_API_TOKEN
- Update help text with new environment variables
- FLY_API_TOKEN: Get with 'flyctl auth token' on logged-in machine
- SPRITE_API_TOKEN: Optional, depends on sprite CLI version support

--- a/sprite-config.example
+++ b/sprite-config.example
@@ -18,6 +18,10 @@ CLAUDE_CODE_OAUTH_TOKEN=sk-ant-oat01-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 # Tailscale Auth Key (enables automated setup)
 # Create at: https://login.tailscale.com/admin/settings/keys - check "Reusable"
 TAILSCALE_AUTH_KEY=tskey-auth-xxxxxxxxxxxx-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# Fly.io API Token (get with: flyctl auth token)
+#FLY_API_TOKEN=fo1_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# Sprite CLI API Token (optional, for non-interactive sprite CLI auth)
+#SPRITE_API_TOKEN=sprite_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 # Sprite Network S3 credentials (optional, from flyctl storage dashboard)
 #SPRITE_NETWORK_S3_BUCKET=sprite-network-your-org
 #SPRITE_NETWORK_S3_ACCESS_KEY=tid_xxxxxxxxxxxxxxxxxxxx
