--- a/sprite-config.example
+++ b/sprite-config.example
@@ -5,7 +5,7 @@
 # Git configuration
 GIT_USER_NAME=Your Name
 GIT_USER_EMAIL=you@example.com
-# sprite-mobile repository (optional, defaults to clouvet/sprite-mobile)
+# sprite-mobile repository (optional, defaults to emonty/sprite-mobile)
 #SPRITE_MOBILE_REPO=https://github.com/your-org/sprite-mobile
 # GitHub Personal Access Token (create at: https://github.com/settings/tokens)
 # Required scopes: repo, read:org, gist
