Rebrand to Vibe-Link
Web UI changes:
- Update login page title from "Sprite Mobile" to "Vibe-Link"
- Update main app title to "Vibe-Link"
- Update PWA manifest name to "Vibe-Link"

CLI tool rebranding:
- Rename CLI tool from "sprite-api" to "vibe-link"
- Update all references in code and documentation
- Update binary name in Makefile
- Update module path in go.mod
- Update all help text and usage examples

--- a/cmd/vibe-link/Makefile
+++ b/cmd/vibe-link/Makefile
@@ -1,7 +1,7 @@
 .PHONY: build install clean test
 
 # Binary name
-BINARY_NAME=sprite-api
+BINARY_NAME=vibe-link
 
 # Build directory
 BUILD_DIR=bin
