--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,18 +2,18 @@
   "name": "Vibe-Link",
   "short_name": "Vibe-Link",
   "description": "Mobile interface for chatting with Claude Code on a Sprite",
-  "start_url": "/",
+  "start_url": "/vibe-engine/",
   "display": "standalone",
   "background_color": "#1a1a2e",
   "theme_color": "#1a1a2e",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "/vibe-engine/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icon-512.png",
+      "src": "/vibe-engine/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
