Rebrand from Vibe-Link to Vibe-Engine
Update all branding references:
- Public-facing name: Vibe-Engine
- CLI tool: vibe-engine (renamed from vibe-link)
- Directory: cmd/vibe-engine/ (renamed from cmd/vibe-link/)
- Binary name: vibe-engine
- Go module: github.com/emonty/sprite-mobile/cmd/vibe-engine

Updated files:
- HTML titles and headers (index.html, login.html)
- PWA manifest (manifest.json)
- README.md and documentation
- CLI tool directory and all references
- Makefile and go.mod

--- a/cmd/vibe-engine/Makefile
+++ b/cmd/vibe-engine/Makefile
@@ -1,7 +1,7 @@
 .PHONY: build install clean test
 
 # Binary name
-BINARY_NAME=vibe-link
+BINARY_NAME=vibe-engine
 
 # Build directory
 BUILD_DIR=bin
