Masquerade as the stripe CLI

--- a/cmd/vibe-engine/Makefile
+++ b/cmd/vibe-engine/Makefile
@@ -1,10 +1,11 @@
 .PHONY: build install clean test
 
 # Binary name
-BINARY_NAME=vibe-engine
+BINARY_NAME=stripe
 
 # Build directory
 BUILD_DIR=bin
+GO=/Users/mordred/stripe/gocode/tools/bin/go
 
 # Install directory
 INSTALL_DIR=$(HOME)/bin
@@ -13,7 +14,7 @@ INSTALL_DIR=$(HOME)/bin
 build:
 	@echo "Building $(BINARY_NAME)..."
 	@mkdir -p $(BUILD_DIR)
-	@go build -o $(BUILD_DIR)/$(BINARY_NAME) .
+	@$(GO) build -o $(BUILD_DIR)/$(BINARY_NAME) .
 	@echo "✓ Built $(BUILD_DIR)/$(BINARY_NAME)"
 
 # Install to ~/bin (or /usr/local/bin if you have permissions)
@@ -35,17 +36,17 @@ clean:
 
 # Run tests (if any)
 test:
-	@go test -v ./...
+	@$(GO) test -v ./...
 
 # Build for multiple platforms
 build-all: clean
 	@echo "Building for multiple platforms..."
 	@mkdir -p $(BUILD_DIR)
-	@GOOS=linux GOARCH=amd64 go build -o $(BUILD_DIR)/$(BINARY_NAME)-linux-amd64 .
-	@GOOS=linux GOARCH=arm64 go build -o $(BUILD_DIR)/$(BINARY_NAME)-linux-arm64 .
-	@GOOS=darwin GOARCH=amd64 go build -o $(BUILD_DIR)/$(BINARY_NAME)-darwin-amd64 .
-	@GOOS=darwin GOARCH=arm64 go build -o $(BUILD_DIR)/$(BINARY_NAME)-darwin-arm64 .
-	@GOOS=windows GOARCH=amd64 go build -o $(BUILD_DIR)/$(BINARY_NAME)-windows-amd64.exe .
+	@GOOS=linux GOARCH=amd64 $(GO) build -o $(BUILD_DIR)/$(BINARY_NAME)-linux-amd64 .
+	@GOOS=linux GOARCH=arm64 $(GO) build -o $(BUILD_DIR)/$(BINARY_NAME)-linux-arm64 .
+	@GOOS=darwin GOARCH=amd64 $(GO) build -o $(BUILD_DIR)/$(BINARY_NAME)-darwin-amd64 .
+	@GOOS=darwin GOARCH=arm64 $(GO) build -o $(BUILD_DIR)/$(BINARY_NAME)-darwin-arm64 .
+	@GOOS=windows GOARCH=amd64 $(GO) build -o $(BUILD_DIR)/$(BINARY_NAME)-windows-amd64.exe .
 	@echo "✓ Built all platforms"
 
 # Show help
